RestAuthClient 0.5.1 ()
  * restauth_user.create_test, User.create_property_test and group.create_test
    now behave exactly like their non-test counterparts. The only difference
    is that user and group creation test methods do not return an instance of
    their respective classes.
  * Added documentation to the test methods
  * create_property_test now also throws PreconditionFailed

RestAuthClient 0.5.0 (29 August 2011)

  * Initial version based on version 0.5 of the RestAuth protocol.